@@ -11,7 +11,9 @@ public class Libro {
 
     @Column(unique = true)
     private String titulo;
-    private String idiomas;
+
+    @Enumerated(EnumType.STRING)
+    private Idioma idiomas;
     private Integer totalDescargas;
 
     @ManyToOne
@@ -20,7 +22,7 @@ public class Libro {
     public Libro (){}
     public Libro (DatosLibro datosLibro) {
         this.titulo = datosLibro.titulo();
-        this.idiomas = datosLibro.idiomas().getFirst();
+        this.idiomas = Idioma.fromString(datosLibro.idiomas().get(0));
         this.totalDescargas = datosLibro.totalDescargas();
     }
 
@@ -49,12 +51,12 @@ public class Libro {
     }
 
 
-    public String getIdiomas() {
+    public Idioma getIdiomas() {
         return idiomas;
     }
 
     public void setIdiomas(String idiomas) {
-        this.idiomas = idiomas;
+        this.idiomas = Idioma.fromString(idiomas);
     }
 
     public Integer getTotalDescargas() {
@@ -63,5 +65,13 @@ public class Libro {
 
     public void setTotalDescargas(Integer totalDescargas) {
         this.totalDescargas = totalDescargas;
+    }
+
+    @Override
+    public String toString() {
+        return "Titulo: " + titulo + '\'' +
+                ", idiomas: " + idiomas + '\'' +
+                ", autor: " + autor.getNombre() +
+                ", totalDescargas: " + totalDescargas;
     }
 }
